<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.james.project.committee.viewmodels.CommitteeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <ProgressBar
            android:id="@+id/progress_horizontal"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:authProgressState="@{viewmodel.createUserProgressStateLiveData}"
            app:layout_constraintBottom_toBottomOf="@id/close_dialog"
            app:layout_constraintEnd_toStartOf="@id/close_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/close_dialog" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{viewmodel.error}"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="@id/close_dialog"
            app:layout_constraintEnd_toStartOf="@id/close_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/close_dialog"
            tools:text="error" />


        <ImageButton
            android:id="@+id/close_dialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/close_dialog"
            android:src="@drawable/ic_close_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_a_new_user"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/close_dialog" />


        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/email_address"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/member_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/enter_role"
            android:hint="@string/enter_role"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_address"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.addNewUserToCommittee(emailAddress.getText().toString(), memberRole.getText().toString())}"
            android:text="@string/add_member"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/member_role" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>