<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.james.project.committee.viewmodels.AuthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/complete_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:text="@={viewmodel.userLiveData.firstName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name_wrapper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lastname"
                    android:inputType="text"
                    android:text="@={viewmodel.userLiveData.lastName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/bio"
                android:lines="4"
                android:text="@={viewmodel.userLiveData.bio}"
                app:layout_constraintTop_toBottomOf="@id/last_name_wrapper" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="@{() -> viewmodel.addUserToDatabse()}"
                android:text="@string/finish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bio" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:visibility="gone"
            app:authProgressState="@{viewmodel.progressVisibilityLiveData}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>