<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.james.project.committee.viewmodels.CommitteeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:elevation="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:onClick="@{()-> viewmodel.showCommitteeDetails(true)}"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/committee_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/committee_logo_background"
                        android:contentDescription="@string/committee_logo"
                        android:gravity="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:textToImage="@{viewmodel.currentCommittee.name}"
                        tools:text="A" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:text="@{viewmodel.currentCommittee.name}"
                        tools:text="@string/app_name" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/message_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="type a message"
            android:background="@drawable/chat_box"
            android:gravity="start"
            android:hint="@string/type_a_message"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="16dp"
            android:text="@={viewmodel.message.message}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_message"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="o" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/attach_file"
            android:src="@drawable/ic_attachment"
            app:layout_constraintBottom_toBottomOf="@id/message_box"
            app:layout_constraintEnd_toEndOf="@id/message_box"
            app:layout_constraintTop_toTopOf="@id/message_box" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> viewmodel.sendMessage()}"
            android:src="@drawable/ic_send"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="@id/message_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/message_box" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/message_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@id/message_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>