<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.james.project.committee.viewmodels.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">


            <ImageButton
                android:id="@+id/close_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_light"
                app:hideTextIfEmpty="@{viewmodel.message}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_horizontal"
                tools:text="An error occurred" />

            <ProgressBar
                android:id="@+id/progress_horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:authProgressState="@{viewmodel.createCommitteeProgressStateLiveData}"
                app:layout_constraintBottom_toBottomOf="@id/close_dialog"
                app:layout_constraintEnd_toStartOf="@id/close_dialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/committee_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/committee_name_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/committee_name"
                    android:inputType="text"
                    android:text="@={viewmodel.committeeMutableLiveData.name}">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/committee_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/description"
                android:lines="5"
                android:text="@={viewmodel.committeeMutableLiveData.description}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/committee_name_wrapper" />


            <Button
                android:id="@+id/create_new_committee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.createNewCommittee()}"
                android:text="@string/create_committee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/committee_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>